fixed text overlapping at event box

--- a/src/webapp/src/client/styles/style/modules/_events.less
+++ b/src/webapp/src/client/styles/style/modules/_events.less
@@ -152,7 +152,6 @@
 
 .event-list-item-place {
     color: #787878;
-    height: 40px;
 }
 
 .event-add-event-button {
